随机抽取修改

--- a/OEBPS/Text/c022.xhtml
+++ b/OEBPS/Text/c022.xhtml
@@ -149,7 +149,7 @@
     <p>我确实像你的女儿。思维相似到让人讨厌的地步。</p>
     <p>本来打算马上离开这个城市……我也还年幼。稍微在这座城市里静下心来努力钻研，从结果上来说，将会带来美好的未来。</p>
     <p>哦，我承认。你的提案对我来说太轻浮了。我会利用你的，父亲”</p>
-    <p>梅赛德斯的这句话，除了柏林哈特之外的人都吓了一跳。</p>
+    <p>梅赛德斯的这句话，除了伯恩哈特之外的人都吓了一跳。</p>
     <p>虽然语调还是很礼貌，但梅赛德斯来到这里后完全停止了给猫戴帽子的行为，并堂堂正正地对父亲说了要利用它。</p>
     <p>但是，伯恩哈特并没有伤害到他的心情，反而笑得很开心。</p>
     <p>“<span class="character">这才是我的孩子</span>”</p>
