--- a/OEBPS/Text/c023.xhtml
+++ b/OEBPS/Text/c023.xhtml
@@ -24,7 +24,7 @@
     <p>更何况，如果只是自己出去的话很容易，但问题是玛吉特和老婆子。</p>
     <p>我不认为能忍受长途旅行，至于玛吉特的母亲，我中途就退休了。</p>
     <p>话虽如此，如果放开不管的话，不知道伯恩哈特会干什么。</p>
-    <p>既然如此，与其在这里反抗，还不如硬着头皮进入柏林哈特怀里去收他的后盾，挖出让步，榨取。</p>
+    <p>既然如此，与其在这里反抗，还不如硬着头皮进入伯恩哈特怀里去收他的后盾，挖出让步，榨取。</p>
     <p>那个虽然不是伙伴，但找到自己价值的期间绝对不会成为敌人。就是这种类型。</p>
     <p>正因为有着同样的性格，所以很明白这一点。</p>
     <p>当然伯恩哈特也看穿了梅赛德斯的想法。</p>
