--- a/OEBPS/Text/c031.xhtml
+++ b/OEBPS/Text/c031.xhtml
@@ -29,7 +29,7 @@
     <p>那么目光转向学园以外。只有一个人，即使不能信赖，也有可以信任的人。</p>
     <p>如果是那个男人的话，可能对这件事情有所了解，假设是瞄准吉克哈特的那一方，对梅赛德斯也能说出“你来处理吧”这样的话吧。</p>
     <p>从这个意义上来说，绝对不能相信他，正因为是这样的男人，才能在恶意意义上相信他。</p>
-    <p>也就是说，梅赛德斯写了一封寄给父亲柏林哈特的信。</p>
+    <p>也就是说，梅赛德斯写了一封寄给父亲伯恩哈特的信。</p>
     <p>顺便一提，阿修塔尔对于这件事什么也没有掌握。</p>
     <p>他好像只是在吉克哈特附近被解放了，肚子饿了才向附近的吉克哈特袭击。</p>
     <p>“<span class="character">梅赛德斯，你在写什么？</span>”</p>
