--- a/OEBPS/Text/c048.xhtml
+++ b/OEBPS/Text/c048.xhtml
@@ -86,7 +86,7 @@
     <p>话虽如此，我还没有自恋到可以称霸迷宫的地步。</p>
     <p>首先是基础巩固。不用着急。</p>
     <p>迄今为止几百年未被制霸的东西，如果放任几年，怎么能超越呢？</p>
-    <p>在学园上学的这七年里，尽可能地发挥自己的力量。如果不那样做的话，别说迷宫的称霸了，就连战胜柏林哈特都困难吧。</p>
+    <p>在学园上学的这七年里，尽可能地发挥自己的力量。如果不那样做的话，别说迷宫的称霸了，就连战胜伯恩哈特都困难吧。</p>
     <p>“<span class="character">汉娜。我想问一下……我还是父辈的孩子吧？</span>”</p>
     <p>“<span class="character">……被敌人说了吗？</span></p>
     <p>“<span class="character">啊。不，其实我也隐隐约约地这么想。</span></p>
