--- a/OEBPS/Text/c054.xhtml
+++ b/OEBPS/Text/c054.xhtml
@@ -104,7 +104,7 @@
     <p>然后多次潜入迷宫，多次带回素材和魔物，为经济做出贡献。</p>
     <p>随着食物的增加，百姓变得健康，健康的百姓中有几个来到了迷宫。</p>
     <p>作为统治者来考虑的话，比起王剑那样拙劣地作为王家的秘宝独占，他的做法更加巧妙。</p>
-    <p>这样巡回强化了的这个城市，最终成为柏林哈特的便利的棋子。</p>
+    <p>这样巡回强化了的这个城市，最终成为伯恩哈特的便利的棋子。</p>
     <p>如果为了那个使之富庶民，食物也给予。甚至庇护。</p>
     <p>一切都是为了自己的利益。</p>
     <p>（凝视……已经，先前的战争）</p>
