--- a/OEBPS/Text/c073.xhtml
+++ b/OEBPS/Text/c073.xhtml
@@ -29,19 +29,19 @@
     <p>或者，说不定在女帝身边也在寻找。</p>
     <p>“ <span class="character">噢，我说！肮脏的野兽！放开我！</span>”</p>
     <p>在通向地下室的道路上，我听到了熟悉的女性的声音。</p>
-    <p>那就是，来到这座城堡当初遇到的叫罗杰的士兵长。</p>
+    <p>那就是，来到这座城堡当初遇到的叫萝世的士兵长。</p>
     <p>虽然有点麻烦，但她不是骑士。</p>
     <p>侍奉城堡的骑士们被给予土地，根据契约在城堡的守护就职可以说是精英，士兵是不持(有)土地的人们。</p>
-    <p>简单说来，骑士是职业组，士兵是警察。其中的洛杉矶所处的位置应该是巡查部长吧。</p>
+    <p>简单说来，骑士是职业组，士兵是警察。其中的萝世所处的位置应该是巡查部长吧。</p>
     <p>再者，男性士兵的处理比士兵还要下。我想是像警卫员一样的东西。</p>
-    <p>但是罗杰的美貌和剑术，美貌和高洁，并且主要根据美貌被放在一眼。</p>
+    <p>但是萝世的美貌和剑术，美貌和高洁，并且主要根据美貌被放在一眼。</p>
     <p>也就是说外观优先。这个国家已经不行了。</p>
-    <p>不管怎样，作为那样不行的国家的士兵长的罗杰，现在被猪人的群体包围拘束了。</p>
+    <p>不管怎样，作为那样不行的国家的士兵长的萝世，现在被猪人的群体包围拘束了。</p>
     <p>“你想干什么！真想把我搞得乱七八糟，被性欲支配的肮脏的猪一伙！</p>
     <p>好吧……但是别忘了！即使身体被污秽到心也不屈服！</p>
     <p>我绝对不会输给猪人之类的！”</p>
     <p>这不是明明知道还故意这么说的吗？</p>
-    <p>猪人一面看着吐出如此出色的经典台词的罗杰，一面为难地相视着。</p>
+    <p>猪人一面看着吐出如此出色的经典台词的萝世，一面为难地相视着。</p>
     <p>这该如何是好？不管怎么做，我们都被阉了啊。</p>
     <p>好像听到了那样的话，一脸为难。</p>
     <p>“那怎么了？不来吗！？</p>
@@ -64,12 +64,12 @@
     <p>接着被放出的第二击砍掉另外的猪人的头，他一边想着“不被阉割就不能放任不管，是个好女人”一边死去了。</p>
     <p>最后被贯穿了心脏的猪人一边想“比起还是被袭击感到喜悦的bitch，是高洁的女骑士哟”满足一边死了。</p>
     <p>本应被杀的O猪人们的死相，不知为何大家都很开心。</p>
-    <p>于是，菲利克斯砍倒了猪人斯，抱着蔷薇跳跃，从猪人群中脱离。</p>
+    <p>于是，菲利克斯砍倒了猪人斯，抱着萝世跳跃，从猪人群中脱离。</p>
     <p>那个动作是漂亮的，现在马上作为骑士也是通用的水平。</p>
     <p>菲利克斯绝对不弱。只是比较对象有点奇怪而已。</p>
     <p>“<span class="character">没事吧？</span>”</p>
     <p>“<span class="character">……啊，啊……没问题</span>”</p>
-    <p>被救出的蔷薇红着脸，盯着菲利克斯。</p>
+    <p>被救出的萝世红着脸，盯着菲利克斯。</p>
     <p>堕落了。汉娜确信了。</p>
     <p>没错，那是恋爱中的女人的脸。</p>
     <p>不过，作为同性限定的恋爱，实际上工作很深。</p>
@@ -88,10 +88,10 @@
     <p>“<span class="character">什……啊，你是……</span>”</p>
     <p>“<span class="character">这样的事啊。你们从一开始就没有抓到吉克林德公主</span>”</p>
     <p>“<span class="character">呃……但是，即便如此也不能让他默默地走下去</span>”</p>
-    <p>罗杰想拔剑，但是太慢了。</p>
+    <p>萝世想拔剑，但是太慢了。</p>
     <p>汉娜敏捷地绕到背后，试图用手刀对准脖子使其昏倒。</p>
     <p>可是不能很好地使之晕倒，没办法夺取roze的头盔之后用那个头盔强打头部，强迫失神了。</p>
-    <p>然后用熟练的手把蔷薇的铠甲脱下来戴在身上。</p>
+    <p>然后用熟练的手把萝世的铠甲脱下来戴在身上。</p>
     <p>“嗯，稍微大了点。总比就这样一直奔走要好吧。</p>
     <p>来，走吧，菲利克斯”</p>
     <p>“<span class="character">是、是</span>”</p>
