--- a/OEBPS/Text/c075.xhtml
+++ b/OEBPS/Text/c075.xhtml
@@ -12,9 +12,9 @@
 
 <body>
     <h1>75. 与所有者战斗</h1>
-    <p>从Beartorix展开了的迷宫，不断地花盛开。</p>
+    <p>从Beartorix展开了的迷宫，花不断地盛开。</p>
     <p>巨大的食虫植物、慢慢靠近的拉弗拉西亚、将树木加工成人形的人偶、延伸到天花板的蔓延……看来贝阿朵里克斯所持有的迷宫是以植物系的魔物为中心。</p>
-    <p>说起植物，最近刚和frederikku作战,不过，没有那个时候那样简单吧。</p>
+    <p>说起植物，最近刚和弗雷德里克作战,不过，没有那个时候那样简单吧。</p>
     <p>“<span class="character">嘘！</span>”</p>
     <p>用哈尔巴德斩断逼近的蔓藤，跳跃躲开大口飞进来的食虫植物。</p>
     <p>可是象瞄准在空中成为了无防备的瞬间一样地巨大的玫瑰堵住左右，射出刺。</p>
@@ -57,17 +57,17 @@
     <p>但是木偶又消失了，从梅赛德斯的背后开始殴打。</p>
     <p>梅赛德斯也以高速移动避开这个迎击。木偶人踢飞了,不过，木偶人坠落到地面的同时跳跃又开始殴打。</p>
     <p>外表看起来不像杂鱼怪物，但却强得惊人。</p>
-    <p>“喂，怎么了？这不是结束吗？</p>
-    <p>你也该当真了……那个哈尔巴德，是迷宫吧？”</p>
+    <p>“<span class="character">喂，怎么了？这不是结束吗？</span></p>
+    <p><span class="character">你也该当真了……那个哈尔巴德，是迷宫吧？</span>”</p>
     <p>“<span class="character">……注意到了吗？</span>”</p>
-    <p>“不知道吗。突然出现的猪群，乘着它们爬上来的本领……要是能来就好了。</p>
-    <p>这个帝都附近没有猪涌出的迷宫，城墙围着。没有进入的间隙。</p>
-    <p>封石也考虑,不过，那样数太多。那么答案只有一个”</p>
+    <p>“<span class="character">不知道吗。突然出现的猪群，乘着它们爬上来的本领……要是能来就好了。</span></p>
+    <p><span class="character">这个帝都附近没有猪涌出的迷宫，城墙围着。没有进入的间隙。</span></p>
+    <p><span class="character">封石也考虑,不过，那样数太多。那么答案只有一个</span>”</p>
     <p>好歹，好象不是只是继承了迷宫的女人。</p>
     <p>同时拥有高超的实力和洞察力、作为指挥官的才能。</p>
     <p>贝阿朵里克斯用从容的笑容继续着语言。</p>
-    <p>“还是王族藏起来了，还是你才是真正的吉克林德……或者是伯恩哈特的血统？虽然不知道那个，捉住之后再问吧。</p>
-    <p>来，拿出真本事。就这样输了也会留下遗憾吧”</p>
+    <p>“<span class="character">还是王族藏起来了，还是你才是真正的吉克林德……或者是伯恩哈特的血统？虽然不知道那个，捉住之后再问吧。</span></p>
+    <p><span class="character">来，拿出真本事。就这样输了也会留下遗憾吧</span>”</p>
     <p>“<span class="character">……就这么办吧</span>”</p>
     <p>正如贝尔特里克斯所说，这样下去会非常贫困。</p>
     <p>魔物究竟是梅赛德斯的话，那只不过是可以毫无问题地打倒的对手而已。</p>
@@ -86,8 +86,8 @@
     <p>梅赛德斯想，与其他的迷宫相比，我们的迷宫是不是太没有统一性了呢？</p>
     <p>话虽如此，阿修塔鲁比克和贝赛德兽舒夫本来就是他们的魔物，所以那里也并非只有植物系吧。</p>
     <p>贝阿朵莉克斯大概也注意到了这一点吧，脸色稍微变蓝了。</p>
-    <p>“那是我放出的魔物吗……不，不会吧……。</p>
-    <p>……不对，不可能！真是偶然啊！</p>
+    <p>“<span class="character">那是我放出的魔物吗……不，不会吧……。</span></p>
+    <p><span class="character">……不对，不可能！真是偶然啊！</span></p>
     <p>贝尔特里克斯用铁扇遮蔽。</p>
     <p>于是魔物们一起行动，这次和刚才不同的是集体战。</p>
     <p>合作的话会输吧，那样的话就把合作搞垮吧。</p>
@@ -115,7 +115,7 @@
     <p>另一方面，京濑智美·奥克他们取得联合确实打倒了魔物。</p>
     <p>还是这边优秀，怎么办。</p>
     <p>“<span class="character">小黑！</span>”</p>
-    <p>“<span class="character">韩元！</span>”</p>
+    <p>“<span class="character">汪！</span>”</p>
     <p>响应梅赛德斯的号令，小黑跑了过去。</p>
     <p>在满是奇怪的魔物中只有小黑被治愈了。</p>
     <p>跳上他的背，一跳梅赛德斯向贝克里克斯接近。</p>
