--- a/OEBPS/Text/c076.xhtml
+++ b/OEBPS/Text/c076.xhtml
@@ -45,12 +45,12 @@
     <p>那是宛如铁制的花朵，虽然有裂痕，却连梅赛德斯的刀刃都防御了。</p>
     <p>贝阿朵列克斯瞄准那个间隙用铁扇横扫了梅赛德斯的肋(侧)。</p>
     <p>虽然马上避开了，但无法避开的梅赛德斯的右手却挥舞着血飞沫。</p>
-    <p>“可怕的威力啊。连这个“艾森布鲁梅”也一击就完了！</p>
+    <p>“<span class="character">可怕的威力啊。连这个“艾森布鲁梅”也一击就完了！</span></p>
     <p>好歹那个铁的华好象『izenburume』。</p>
     <p>这个名字不知道，但是这种时候是杜威尔夫出场的。</p>
-    <p>“当地识别名‘艾森布鲁梅’。</p>
-    <p>威胁度是D。是铁单一属性的魔物，基本什么都不做无害。</p>
-    <p>可是那个防御力极高，纯粹的冲击丝毫也不做”</p>
+    <p>《<span class="character">当地识别名‘艾森布鲁梅’。</span></p>
+    <p><span class="character">威胁度是D。是铁单一属性的魔物，基本什么都不做无害。</span></p>
+    <p><span class="character">可是那个防御力极高，纯粹的冲击丝毫也不做</span>》</p>
     <p>梅赛德斯想，难道是只能用作盾牌的魔物吗？</p>
     <p>所以说话很简单。只用作盾牌，所以用作盾牌。只是那么简单的事情。</p>
     <p>贝阿朵力克斯迅速收纳了《艾森蓝梅》，接着又从铁扇中射出了荆棘，没想到刺被发射袭击了梅赛德斯。</p>
@@ -69,10 +69,10 @@
     <p>但是陷入劣势的是梅赛德斯。</p>
     <p>梅赛德斯没有，贝阿列克斯有的东西，是钻研。</p>
     <p>只有放出魔物的梅赛德斯，和操纵魔物的贝亚特里克斯的差距产生了这个战况。</p>
-    <p>“没有变成这样，完全没有用法。</p>
-    <p>魔物并不是只要拿出来就好。</p>
-    <p>该如何运用、该放在哪里、该如何组合……只有思考并付诸行动，才是真正的继承者。</p>
-    <p>魔物既是剑也是盾。不知道这一点的你赢了我”</p>
+    <p>“<span class="character">没有变成这样，完全没有用法。</span></p>
+    <p><span class="character">魔物并不是只要拿出来就好。</span></p>
+    <p><span class="character">该如何运用、该放在哪里、该如何组合……只有思考并付诸行动，才是真正的继承者。</span></p>
+    <p><span class="character">魔物既是剑也是盾。不知道这一点的你赢了我</span>”</p>
     <p>贝阿朵里克斯一边说话一边优雅地舞蹈。</p>
     <p>这时，铁扇上的花瓣纷纷扬扬，堆满了斗技场。</p>
     <p>那也是某种魔物的一部分吧。</p>
@@ -88,7 +88,7 @@
     <p>所以作为迷宫主人的战斗，梅赛德斯输了。</p>
     <p>没有办法从这里重新振作。</p>
     <p>但是，即使赢不了，也有将盘面翻过来的手段。</p>
-    <p>《主人》</p>
+    <p>《<span class="character">主人</span>》</p>
     <p>“<span class="character">……不得已啊。如果可以的话我想用实力取胜</span>”</p>
     <p>“<span class="character">认输有时也很重要。以此为教训，下次再活用吧</span>”</p>
     <p>“<span class="character">是啊</span>”</p>
@@ -96,16 +96,16 @@
     <p>放弃了什么……那是靠自己的力量取得的胜利。</p>
     <p>我知道这样下去是赢不了的。</p>
     <p>因此，在认输的基础上将棋盘翻过来。</p>
-    <p>“女帝贝阿列克斯。正如你所说，我钻研不够。</p>
-    <p>真的让我学到了使用迷宫的意思”</p>
-    <p>“哇，真干净。放弃了吗？</p>
-    <p>“啊，放弃了……靠自己的力量来取得胜利吧。</p>
-    <p>事先告诉你。现在我所做的事对我来说也是不情愿的犯规，我不承认这种东西就是胜利。</p>
-    <p>所以，这场战斗的胜者是你，败者是我。在此前提下……”</p>
+    <p>“<span class="character">女帝贝阿列克斯。正如你所说，我钻研不够。</span></p>
+    <p><span class="character">真的让我学到了使用迷宫的意思</span>”</p>
+    <p>“<span class="character">哇，真干净。放弃了吗？</span></p>
+    <p>“<span class="character">啊，放弃了……靠自己的力量来取得胜利吧。</span></p>
+    <p><span class="character">事先告诉你。现在我所做的事对我来说也是不情愿的犯规，我不承认这种东西就是胜利。</span></p>
+    <p><span class="character">所以，这场战斗的胜者是你，败者是我。在此前提下……</span>”</p>
     <p>梅赛德斯一边用略显低落的声音说话一边将蓝色的艾森扎在地板上。</p>
     <p>然后收纳魔物们，静静地闭上眼睛。</p>
     <p>“<span class="character">让你倒下吧</span>”</p>
-    <p>他自己刚刚说赢不了。</p>
+    <p>她自己刚刚说赢不了。</p>
     <p>那么让她倒下是什么意思呢？</p>
     <p>梅赛德斯比贝尔特里克斯更早地提出了答案。</p>
     <p>“<span class="character">茨瓦尔夫</span>”</p>
