--- a/OEBPS/Text/c077.xhtml
+++ b/OEBPS/Text/c077.xhtml
@@ -91,14 +91,14 @@
     <p>即便如此，如果有胜算的话，就能划开魔物的波浪，制止梅赛德斯，但重要的个人战力也会使梅赛德斯获胜。</p>
     <p>那就无可奈何了。完全堵塞了。</p>
     <p>贝亚特里克斯也领悟到这一点，静静地微笑着。</p>
-    <p>“嗯。年幼却坚强、粗暴、美丽……那就好。</p>
-    <p>让我们接受失败吧。我在等你这样的人。</p>
-    <p>“……你说什么？</p>
+    <p>“<span class="character">嗯。年幼却坚强、粗暴、美丽……那就好。</span></p>
+    <p><span class="character">让我们接受失败吧。我在等你这样的人。</span></p>
+    <p>“<span class="character">……你说什么？</span></p>
     <p>“<span class="character">我女儿。你不想成为国王吗？</span>”</p>
     <p>被头用刀刺死，虽然掌握了生杀予夺权，但贝阿朵里克斯还是没有失去余地。</p>
     <p>倒不如说这种状况才是期待已久的，甚至笑了笑。</p>
-    <p>“世界正在荒芜。永不结束的战乱、不进步的文明、不变的吸血鬼……这样下去我们种族会越来越疲惫的。它们都是鸟还是兽，还是长耳呢……会因为其他的法鲁什而被消灭吧。</p>
-    <p>虽然不知道是偶然还是必然，但近年来，那些家伙呈现了统一的动向。吸血鬼也到了必须适可而止的时候”</p>
+    <p>“<span class="character">世界正在荒芜。永不结束的战乱、不进步的文明、不变的吸血鬼……这样下去我们种族会越来越疲惫的。它们都是鸟还是兽，还是长耳呢……会因为其他的法鲁什而被消灭吧。</span></p>
+    <p><span class="character">虽然不知道是偶然还是必然，但近年来，那些家伙呈现了统一的动向。吸血鬼也到了必须适可而止的时候</span>”</p>
     <p>吸血鬼和其他的法鲁什绝不是友好的关系。</p>
     <p>与其说是敌对，不如说是互相敌视的关系。</p>
     <p>在以前的战争中，吸血鬼的胜利，梅赛德斯在学园里也学到了很多。</p>
@@ -107,18 +107,18 @@
     <p>“<span class="character">……这就是为什么要对奥尔克斯挑毛病的原因吗？</span>”</p>
     <p>“<span class="character">对了。他打算把两把王剑集中到一个地方，创造一个新时代的王</span>”</p>
     <p>“<span class="character">你本来打算成为那个的？</span>”</p>
-    <p>“不，我怎么着急也是继承人。不能去那上面。</p>
-    <p>我本来打算做那个的吧。</p>
-    <p>我小时候开始为了攻占迷宫而进行教育和训练，然后攻略后将我和吉克林德的继承权转让给皇帝”</p>
+    <p>“<span class="character">不，我怎么着急也是继承人。不能去那上面。</span></p>
+    <p><span class="character">我本来打算做那个的吧。</span></p>
+    <p><span class="character">我小时候开始为了攻占迷宫而进行教育和训练，然后攻略后将我和吉克林德的继承权转让给皇帝</span>”</p>
     <p>不过，贝阿朵里克斯看起来很遗憾地继续着。</p>
-    <p>“如果事情顺利的话，就不会辛苦了。</p>
-    <p>那个现在还不成熟，连我都赢不了。笨拙的孩子也很可爱，但一想到目的光是爱是不行的。</p>
-    <p>但是今天这一天，我能够遇到我所期望的存在”</p>
+    <p>“<span class="character">如果事情顺利的话，就不会辛苦了。</span></p>
+    <p><span class="character">那个现在还不成熟，连我都赢不了。笨拙的孩子也很可爱，但一想到目的光是爱是不行的。</span></p>
+    <p><span class="character">但是今天这一天，我能够遇到我所期望的存在</span>”</p>
     <p>一边这样说着，贝阿朵里克斯流向梅赛德斯目送着眼睛。</p>
     <p>如果是男人的话，这也许只是一个奇迹，但对于梅赛德斯来说毫无意义。</p>
-    <p>“我的女儿。你很强，而且那个年龄也有冷静的判断力。</p>
-    <p>你才是我所追求的存在……是应该成为王的人。</p>
-    <p>故而问吧。用这股力量将王剑汇集到一起，你想成为吸血鬼的皇帝吗？”</p>
+    <p>“<span class="character">我的女儿。你很强，而且那个年龄也有冷静的判断力。</span></p>
+    <p><span class="character">你才是我所追求的存在……是应该成为王的人。</span></p>
+    <p><span class="character">故而问吧。用这股力量将王剑汇集到一起，你想成为吸血鬼的皇帝吗？</span>”</p>
     <p>梅赛德斯认为贝阿朵里克斯的语言。</p>
     <p>突然之间变得沉重起来，但据悉吸血鬼统一并不是开玩笑，而是当务之急。</p>
     <p>那么皇帝暂且不说，统一迷宫是必要的吧。</p>
