--- a/OEBPS/Text/c078.xhtml
+++ b/OEBPS/Text/c078.xhtml
@@ -77,33 +77,33 @@
     <p>既然现在不能马上准备影武者，我就会产生失踪的『间』。</p>
     <p>这样的话，我们的士兵们肯定会怀疑影武者吧”</p>
     <p>“<span class="character">……所以，你要留在这里？不值一提</span>”</p>
-    <p>“不对。你听着。</p>
-    <p>不用特意准备，如果是你的话，现在就可以准备精度很高的影武者。</p>
-    <p>我来教你那个方法吧”</p>
+    <p>“<span class="character">不对。你听着。</span></p>
+    <p><span class="character">不用特意准备，如果是你的话，现在就可以准备精度很高的影武者。</span></p>
+    <p><span class="character">我来教你那个方法吧</span>”</p>
     <p>你在想什么？</p>
     <p>我怀疑地盯着贝阿朵莉克斯，她只是奇怪地微笑着。</p>
-    <p>*</p>
+    <p class="divline"></p>
     <p>“<span class="character">呼……终于全灭了吗？丑恶的猪</span>”</p>
-    <p>擦拭着额头的汗水，蔷薇花一口气喘吁吁。</p>
+    <p>擦拭着额头的汗水，萝丝一口气喘吁吁。</p>
     <p>进入城中的猪人群平安地扫荡完毕，恢复了平静。</p>
     <p>因为使用了不象猪人sa的游击队战法和联合所想之外使之苦战,不过，还是象正规的骑士和士兵取后一样的事没有。</p>
     <p>城里涌出的猪人也已经被讨伐了吧。</p>
     <p>在那里，她们的王贝阿朵里克斯出现了。</p>
-    <p>“<span class="character">看来猪已经被宰了吧，洛杉矶士兵长</span>”</p>
+    <p>“<span class="character">看来猪已经被宰了吧，萝世士兵长</span>”</p>
     <p>“<span class="character">陛下！为什么在这样的地方……</span>”</p>
-    <p>“<span class="character">什么呀，地下有一只老鼠。我代替运动来处理了</span>”</p>
-    <p>那句话使蔷薇褪色了。</p>
+    <p>“<span class="character">没什么，地下有一只老鼠。我代替运动来处理了</span>”</p>
+    <p>那句话使萝世褪色了。</p>
     <p>没有注意到敌人的入侵，连小末都麻烦了王的手。</p>
-    <p>大概是从洛杉矶的表情中察觉到她的心境吧。贝阿朵莉克斯用平静下来的声音说话。</p>
+    <p>大概是从萝世的表情中察觉到她的心境吧。贝阿朵莉克斯用平静下来的声音说话。</p>
     <p>“<span class="character">好。别在意</span>”</p>
-    <p>“<span class="character">し、但是……</span>”</p>
+    <p>“<span class="character">但、但是……</span>”</p>
     <p>“<span class="character">比起这个，味道更难闻。快把猪们从城里赶出来！</span>”</p>
     <p>“<span class="character">哈！马上！</span>”</p>
     <p>那是声音和动作，外表，全部完美的贝阿朵列克斯。</p>
     <p>看到她就怀疑是假的吧。因为她说她实际上是真正的贝阿朵列克斯也不过分。</p>
     <p>不仅仅是外表。性格、记忆、人格和思考都与贝克列克斯一致。</p>
     <p>即使有通过指纹、声纹、视网膜等进行确认的技术，也只能得出结论是真货。</p>
-    <p>但是，她却……至少，到昨天为止不是被罗杰们称为陛下的人物。</p>
+    <p>但是，她却……至少，到昨天为止不是被萝世们称为陛下的人物。</p>
     <p>真正的贝阿朵莉克斯被收藏在那个时候，乘着皮可的背飞的梅赛德斯的蓝色艾森中。</p>
     <p>旁边有汉娜，菲利克斯的脚像猎物一样被抓住。</p>
     <p>结论是，城中的贝阿朵里克斯是影武者。</p>
