--- a/OEBPS/Text/c088.xhtml
+++ b/OEBPS/Text/c088.xhtml
@@ -27,17 +27,17 @@
     <p>“<span class="character">我没见过那种东西。比起那个，我有想问的事情</span>”</p>
     <p>她向她说明了贝阿朵列克斯所说的话，自己现在正在关联的麻烦派系的事，攻略者的孩子的一半被追捕了的事等。</p>
     <p>听到这些，贝阿朵列克斯的表情有些认真，像是在思考一样抱着胳膊。</p>
-    <p>“原来如此……嗯，那件事我也知道。</p>
-    <p>新的攻略者出现了这样的话当时是冲击。这样的话用武力被奥克思抽出的话着急哟。</p>
-    <p>结果愚蠢的国王擅自处理了攻略者，对我国来说是方便的……是吗，女儿还活着吗？”</p>
+    <p>“<span class="character">原来如此……嗯，那件事我也知道。</span></p>
+    <p><span class="character">新的攻略者出现了这样的话当时是冲击。这样的话用武力被奥克思抽出的话着急哟。</span></p>
+    <p><span class="character">结果愚蠢的国王擅自处理了攻略者，对我国来说是方便的……是吗，女儿还活着吗？</span>”</p>
     <p>贝阿朵里克斯方面也好象抓住着新的攻略者出现了的事。</p>
     <p>据说马克斯少年的事也是第一次听说，这之后的事情好像还不知道。</p>
     <p>很遗憾，好像没有特别值得一提的信息。</p>
     <p>虽然这么想，但贝阿朵里克斯还是像想起来一样继续讲话。</p>
-    <p>“攻略者克里斯托夫·战斗的事情稍微知道一点。</p>
-    <p>虽然不是我的口味，但表情精悍的美男子。</p>
-    <p>头发是金发，完全是正统派骑士的感觉吗？</p>
-    <p>听说他是个比别人加倍努力且绅士的男人”</p>
+    <p>“<span class="character">攻略者克里斯托夫·战斗的事情稍微知道一点。</span></p>
+    <p><span class="character">虽然不是我的口味，但表情精悍的美男子。</span></p>
+    <p><span class="character">头发是金发，完全是正统派骑士的感觉吗？</span></p>
+    <p><span class="character">听说他是个比别人加倍努力且绅士的男人</span>”</p>
     <p>“<span class="character">原来如此</span>”</p>
     <p>金发美男绅士正统派……好像在哪里见过似的。</p>
     <p>总而言之，给人的印象是听过之后与城堡的乱七八糟的阴谋毫无关系。</p>
@@ -54,9 +54,9 @@
     <p>不如说，克里斯托夫被暗杀了……并且承包暗杀等的当然是暗部。</p>
     <p>汉娜是暗部之一的隐密队之首，当然知道啦。</p>
     <p>她沉默了一会儿，叹了一口气，静静地说道。</p>
-    <p>“……嗯。正确答案哦，梅尔。</p>
-    <p>暗部的高层是我。那当然，除非我得到许可，否则我不会行动。</p>
-    <p>也就是说，是我杀了他”</p>
+    <p>“<span class="character">……嗯。正确答案哦，梅尔。</span></p>
+    <p><span class="character">暗部的高层是我。那当然，除非我得到许可，否则我不会行动。</span></p>
+    <p><span class="character">也就是说，是我杀了他</span>”</p>
     <p>他坦白说，自己就是亲手杀害克里斯托夫的犯人。</p>
     <p>这里没有任何借口，只有甘愿接受任何骂人的决心。</p>
     <p>面对这样的她，梅赛德斯惊讶地吐了一口气，然后说</p>
@@ -64,8 +64,8 @@
     <p>“<span class="character">诶</span>”</p>
     <p>“<span class="character">我知道你不是那种傻瓜。像这种‘责任全在自己身上’就好了，请告诉我们真实情况</span>”</p>
     <p>“<span class="character">不，那个……</span>”</p>
-    <p>“主观的责任感啦‘自己做过的事情’啦，不需要那样的噪音。</p>
-    <p>只告诉我客观发生的事情”</p>
+    <p>“<span class="character">主观的责任感啦‘自己做过的事情’啦，不需要那样的噪音。</span></p>
+    <p><span class="character">只告诉我客观发生的事情</span>”</p>
     <p>梅赛德斯轻易看穿了谎言，汉娜一下子变得语无伦次。</p>
     <p>她有个毛病，但不是傻瓜。</p>
     <p>你应该知道杀克里斯托夫是怎么回事。</p>
@@ -73,34 +73,34 @@
     <p>是啊，现在好像真的产生了所谓王的派系。</p>
     <p>既然如此，就算是国王的命令，也不必那样跟随王吧。</p>
     <p>梅赛德斯识破了这件事，转眼间镀金剥落了。</p>
-    <p>“嗯……嘛，的确，我并不是自己下手的。</p>
-    <p>总而言之，黑暗部这个那个地也有，我本人主要负责潜入据点的情报收集和化为町人的要人护卫等。</p>
-    <p>…………嘛，包括所有的暗部在内，就像我的部下一样，果然最终还是……”</p>
+    <p>“<span class="character">嗯……嘛，的确，我并不是自己下手的。</span></p>
+    <p><span class="character">总而言之，黑暗部这个那个地也有，我本人主要负责潜入据点的情报收集和化为町人的要人护卫等。</span></p>
+    <p><span class="character">…………嘛，包括所有的暗部在内，就像我的部下一样，果然最终还是……</span>”</p>
     <p>“<span class="character">只给我客观事实</span>”</p>
     <p>“<span class="character">啊，好的。</span>”</p>
     <p>汉娜一边移开视线，一边很内疚地说道。</p>
     <p>那张脸紧绷着笑容，流着汗。</p>
     <p>好不容易坚定了决心，明明说了所有的责任都是我的，可就是这种盐的对应。</p>
     <p>汉娜差不多要哭了。</p>
-    <p>“那时候，我有点别的任务潜入别的国家了……。</p>
-    <p>不在家的时候就交给副官了，那个人呢……按照陛下的指示派遣了暗杀部队……话说，暗杀队的大家都很酷，或者说自己不怎么思考……说是工人，或者说是精通工具……总之，毫无疑问的执行命令的孩子们，不，优秀。总之，我回来的时候已经全部结束了……”</p>
+    <p>“<span class="character">那时候，我有点别的任务潜入别的国家了……。</span></p>
+    <p><span class="character">不在家的时候就交给副官了，那个人呢……按照陛下的指示派遣了暗杀部队……话说，暗杀队的大家都很酷，或者说自己不怎么思考……说是工人，或者说是精通工具……总之，毫无疑问的执行命令的孩子们，不，优秀。总之，我回来的时候已经全部结束了……</span>”</p>
     <p>一边做着含糊不清的说明，一边对准双手的食指。</p>
     <p>恐怕她有相当的罪恶感吧。</p>
     <p>虽说汉娜不知道部下做的事，但部下的责任就是汉娜的责任。</p>
     <p>所以她对这件事也感到很抱歉。</p>
     <p>虽说如此，但“是我干的”这样的误解还是不能接受的。</p>
     <p>“<span class="character">那么作为汉娜，是反对克里斯托夫暗杀的吗？</span>”</p>
-    <p>“虽然也不是说结束之后说的话，但是不是很好的手吗。</p>
-    <p>克里斯托夫也有来自其他的骑士的人望。</p>
-    <p>好不容易是增加王剑的好机会，却错过了。</p>
-    <p>作为我来说，应该把克里斯托夫先生接入王家……哎呀，就是马后炮了”</p>
+    <p>“<span class="character">虽然也不是说结束之后说的话，但是不是很好的手吗。</span></p>
+    <p>克<span class="character">里斯托夫也有来自其他的骑士的人望。</span></p>
+    <p><span class="character">好不容易是增加王剑的好机会，却错过了。</span></p>
+    <p><span class="character">作为我来说，应该把克里斯托夫先生接入王家……哎呀，就是马后炮了</span>”</p>
     <p>这样说着，汉娜落下了肩膀。</p>
     <p>虽然没有关系，但是对于这件事，汉娜几乎没有涉足。</p>
     <p>作为自己的替角剩下的副官是傻瓜，按照王说的那样行动了。只是如此而已。</p>
     <p>虽然我想说，不要把这些当成副官，但没有看人的眼光是自古以来就有的吧。</p>
     <p>“<span class="character">话说副官呢？</span>”</p>
-    <p>“……后来意识到自己做过的事情有多重，觉得自己有责任就辞职了。</p>
-    <p>现在正在培养新的副官”</p>
+    <p>“<span class="character">……后来意识到自己做过的事情有多重，觉得自己有责任就辞职了。</span></p>
+    <p><span class="character">现在正在培养新的副官</span>”</p>
     <p>“<span class="character">这样啊</span>”</p>
     <p>做坏事的副官也是受害者。</p>
     <p>因为国王下达了命令，所以作为军队服从绝不是错误的行为。</p>
@@ -114,10 +114,10 @@
     <p>确实对将来不感到不安，贵族们不安视把她做为首位的事也能理解。</p>
     <p>吉克林德自己绝对不坏,不过，对父亲和祖父的二人双重无能只有不安。</p>
     <p>因为她自身的超凡魅力性更高，只是祈愿想办法与聪明的丈夫贴紧的事。</p>
-    <p>“这倒不错。现在找的是两个女儿中的一个被抓到的追捕者。</p>
-    <p>你知道些什么吗？</p>
-    <p>“就算你知道，那也是刚才说的副官。</p>
-    <p>事后报告说克里斯托夫的孩子被捕后处刑了。然后，之后马上就辞职了”</p>
+    <p>“<span class="character">这倒不错。现在找的是两个女儿中的一个被抓到的追捕者。</span></p>
+    <p><span class="character">你知道些什么吗？</span></p>
+    <p>“<span class="character">就算你知道，那也是刚才说的副官。</span></p>
+    <p><span class="character">事后报告说克里斯托夫的孩子被捕后处刑了。然后，之后马上就辞职了</span>”</p>
     <p>“<span class="character">那个副官的名字是？</span>”</p>
     <p>“<span class="character">尼级允浩斯。其实我和梅尔是亲戚</span>”</p>
     <p>汉娜的原副官好像是梅赛德斯的亲戚。</p>
@@ -131,7 +131,7 @@
     <p>如果不是那样的话，会变得很麻烦。</p>
     <p>“<span class="character">……菲利克斯……头发的颜色和父亲和瓦尔堡加夫人都不一样啊</span>”</p>
     <p>“<span class="character">嗯？嗯，是啊</span>”</p>
-    <p>“<span class="character">而且和菲利克斯一样的金发是威尔布加的家……也就是说没有yunkasu家吧？</span>”</p>
+    <p>“<span class="character">而且和菲利克斯一样的金发是瓦尔堡加的家……也就是说没有yunkasu家吧？</span>”</p>
     <p>“<span class="character">啊。啊，嗯。是吗？</span>”</p>
     <p>“<span class="character">这可能是偶然的一致，但我看到的马克斯·斗特的头发是金发。</span>”</p>
     <p>“<span class="character">……</span>”</p>
@@ -144,12 +144,12 @@
     <p>不，等一下。但这是太过份了。</p>
     <p>伯恩哈特不可能不知道这么重要的信息。</p>
     <p>但梅赛德斯脑海中却回想起一句话。</p>
-    <p>那是第一次和柏林哈特见面的那天。这是伯恩哈特对菲利克斯说的话。</p>
+    <p>那是第一次和伯恩哈特见面的那天。这是伯恩哈特对菲利克斯说的话。</p>
     <p>所谓宝石就是从意想不到的地方出来的。</p>
     <p>——严格挑选血统・・・・・对应该实施过彻底教育的菲利克斯的无能感到十分的恐惧。</p>
     <p>梅赛德斯情不自禁地拍了一下额头。</p>
-    <p>没错……柏林哈特都知道。</p>
-    <p>明知故犯，娶了保鲁保加……而能做出来的孩子就是菲利克斯。</p>
+    <p>没错……伯恩哈特都知道。</p>
+    <p>明知故犯，娶了瓦尔堡加……而能做出来的孩子就是菲利克斯。</p>
     <p>也就是说，瓦尔堡加才是被捕的攻略者的女儿。</p>
 </body>
 
