--- a/OEBPS/Text/c089.xhtml
+++ b/OEBPS/Text/c089.xhtml
@@ -12,134 +12,135 @@
 
 <body>
     <h1>89. 真相調査</h1>
-    <p>※今夜辺りに殺られてたよ→今日の朝にでも殺られてたよ　に修正。</p>
-    <p>吸血鬼の行動時間帯が夜なのを失念してました。</p>
+    <p>※今天晚上被杀了→修改成今天早上也被杀了。</p>
+    <p>我忘记了吸血鬼的行动时间是晚上。</p>
     <p class="divline"></p>
-    <p>菲利克斯とマックス・ファイトの嫌な繋がりが見えてしまった翌日。</p>
-    <p>梅赛德斯と汉娜は早速、裏を取る為にとある場所を目指していた。</p>
-    <p>王都アーベントロートから馬車で七日ほど、ピーコならば一日で着く距離にあるシュピラーレという都市が今回の目的地だ。</p>
-    <p>ここら一帯はシェーンベルク侯爵家が治める土地であり、海に面している為に豊富な海産物が名物となっている。</p>
-    <p>シェーンベルグは侯爵家の一つであり、公爵を除けば貴族の位としては最上位と言っていい。</p>
-    <p>このオルクスの爵位は中世ドイツに似ているが一部が違う。</p>
-    <p>例えば大公という位そのものはあっても、大公はいない。</p>
-    <p>大公というのは王族の、王以外の者や分家の長が称するものだが、王剣のシステムがその存在を許さない。</p>
-    <p>下手に王以外に継承者を残しては王の絶対性が崩れてしまうからだ。</p>
-    <p>その事は愚王アウグストがクリストフの抹殺を図った事からも分かるだろう。</p>
-    <p>なので王以外の王族は子孫を残さず、一代で消えなければならない。</p>
-    <p>王族という事で生きている間は敬われるし贅沢も出来るが、それでも一つの勢力になる事は絶対に許されないし、大公の位も与えられない。</p>
-    <p>その次の公爵は一応格鲁内瓦特家が該当するが、これも基本的にはいない。</p>
-    <p>公爵は貴族の中でも別格で、王族に限りなく近い発言力と影響力を持つ。</p>
-    <p>その次に位置するのが侯爵家だ。</p>
-    <p>そして梅赛德斯と汉娜は、その侯爵家に用があってここまで来ていた。</p>
-    <p>ピーコから降りて門を潜り、都市の中に入る。</p>
-    <p>シュピラーレはオルクスに比べれば劣るもののかなり賑わった都市だ。</p>
-    <p>その中でも一際目立つ大きな屋敷が今回の目的地であった。</p>
-    <p>そこへ向かう道を歩きながら、梅赛德斯は気になった事を汉娜へ尋ねる。</p>
-    <p>“<span class="character">件の人物はニクラス・ユンカースだったか。これから向かう屋敷とは家名が違うようだが？</span>”</p>
-    <p>“ニクラスは元々は子爵家なんだよ。けどシェーンベルク家に婿入りして家名が変わったの。</p>
-    <p>だから今はニクラス・ユンカース・フォン・シュピラーレ・シェーンベルクっていう長ったらしい名前になってるよ”</p>
-    <p>“つまりユンカース家のニクラスがシェーンベルク家に婿入りして、そこの娘であるヴァルブルガが格鲁内瓦特家に入って……しかしヴァルブルガは本当はファイト家の娘かもしれない、と。</p>
-    <p>何だかややこしくなってきたな”</p>
-    <p>“<span class="character">貴族なんてどこもそんなもんだよ。あちこちが親戚だらけ</span>”</p>
-    <p>話しながら汉娜はケラケラと笑う。</p>
-    <p>彼女としても親戚ばかりの貴族の在り方に思うものはあるのだろう。</p>
-    <p>その笑い方はどこか貴族というものを皮肉っているようにも見えた。</p>
-    <p>“<span class="character">ニクラスは子爵家の次男坊でね。爵位はお兄さんが継ぐ事になった上に本人はなかなかいい出会いに恵まれなくて、何か気付いたら隠密部隊に入隊してたんだって</span>”</p>
-    <p>“<span class="character">そんな適当に入っていいのか……暗部</span>”</p>
-    <p>“私が入った時は長くいる割にパッとしないっていう地味な人だったなあ。</p>
-    <p>でも経験は隊の中で一番だったから私が隊長になった時に副官に任命したの”</p>
-    <p>どうやらニクラスとやらは汉娜の先輩で年上らしい。</p>
-    <p>まあそれもそうか、と思う。</p>
-    <p>汉娜は子供はいても孫はいない。つまりはベルンハルトやヴァルブルガと同じ親世代だ。</p>
-    <p>一方ニクラスはそのヴァルブルガの父なのだから、言うならば祖父の世代である。</p>
-    <p>この辺りがややこしく曖昧になってしまっているのは、長命の吸血鬼だからこそか。</p>
-    <p>ここで少し整理しよう。</p>
-    <p>まず祖父の世代に該当するのは今言ったニクラスに、それからアウグスト・アーベントロート。</p>
-    <p>次に親世代。ここに入るのはベルンハルトと汉娜、ヴァルブルガにイザーク、それから見た目は完全にジジイだったが弗里德里克もここか。改めて考えると哀しい男である。</p>
-    <p>そして子世代が自分達だ。</p>
-    <p>……もしかして汉娜は親世代の中ではかなり年長の部類なのでは？　梅赛德斯は訝しんだ。</p>
-    <p>“<span class="character">あ、着いたよ</span>”</p>
-    <p>汉娜の声で意識が現実に引き戻される。</p>
-    <p>到着したそこは立派な屋敷で、屋根には……何だろう？</p>
-    <p>まるでソフトクリームのようなクルクルと螺旋を巻いた変なオブジェが取り付けられている。</p>
-    <p>金色のソフトクリームだろうか？</p>
-    <p>茶色にすると少しやばい気がする。</p>
-    <p>“<span class="character">ちょっと待っててね。門番の人に話を通して来るから</span>”</p>
-    <p>汉娜がそう言いながら歩いていくのを見送り、梅赛德斯は改めて屋敷を見る。</p>
-    <p>貴族は親戚だらけ……なるほど。</p>
-    <p>何かこの特徴的なグルグルはどこかで見たような気がしないでもない。</p>
-    <p>覚えていないと言う事は影の薄い、どうでもいい奴だったという事なのだろうが……きっとこの家も、自分が知る誰かの親戚か、あるいは実家なのだろう。</p>
+    <p>菲利克斯和麦克斯·战斗的令人讨厌的联系出现的第二天。</p>
+    <p>梅赛德斯和汉娜立刻为了取得秘密，朝着某个地方进发。</p>
+    <p>这次的目的地是从王都阿本特罗乘坐马车七天左右，如果是皮可的话一天就到的距离的城市。</p>
+    <p>这一带是莎恩伯格侯爵家治理的土地，因为面向大海，所以以丰富的海产品闻名。</p>
+    <p>莎恩伯格是侯爵家之一，可以说除了公爵以外作为贵族的地位是最高位的。</p>
+    <p>这个奥尔克斯的爵位和中世纪的德国相似，但是一部分不同。</p>
+    <p>比如说虽然有大公这个名号，但是没有大公。</p>
+    <p>大公是王族以外的人和分家的长称之为王族的，但是王剑的系统不允许其存在。</p>
+    <p>因为如果在王以外留下继承人的话，王的绝对性就会崩溃。</p>
+    <p>这件事从愚王奥古斯企图抹杀克里斯托夫这点也可以看出吧。</p>
+    <p>所以除了王以外的王族都不留下子孙，一代就必须消失。</p>
+    <p>因为是王族，所以在活着的时候会受到尊敬和奢侈，但是绝对不允许成为一个势力，也不被赋予大公的地位。</p>
+    <p>下一个公爵相当于格鲁内瓦特家，但基本上没有。</p>
+    <p>公爵在贵族中也是特别的，拥有和王族无限接近的发言力和影响力。</p>
+    <p>其次是侯爵家。</p>
+    <p>梅赛德斯和汉娜因为有事来到了侯爵家。</p>
+    <p>从皮可下来穿过门进入城市。</p>
+    <p>舒伯莱虽然比奥鲁斯差，但却是个相当热闹的城市。</p>
+    <p>其中特别显眼的大房子就是这次的目的地。</p>
+    <p>梅赛德斯一边走着去那里的路，一边向汉娜询问在意的事情。</p>
+    <p>“<span class="character">那件事的人物是尼古拉斯•尤恩卡斯吗？看来和接下来要去的房子的名字不一样？</span>”</p>
+    <p><span class="character">尼古拉斯原本是子爵家。但是在莎恩贝尔克家入赘女婿后家名就变了。</span></p>
+    <p><span class="character">所以现在的名字好像是尼古拉斯、尹卡斯、冯、施彼勒、谢恩贝尔克。”</span>”</p>
+    <p><span class="comment translator">ニクラス・ユンカース・フォン・シュピラーレ・シェーンベルク</span></p>
+    <p>“<span class="character">也就是说，容克斯家的尼古拉斯入赘到了莎恩贝尔克家，那里的女儿瓦尔布尔加进入了格鲁内瓦特家……但是瓦尔布尔加实际上可能是战斗家的女儿。</span></p>
+    <p><span class="character">总觉得变得麻烦起来了</span>”</p>
+    <p>“<span class="character">贵族什么的到处都是亲戚。</span>”</p>
+    <p>汉娜一边说话一边哈哈大笑。</p>
+    <p>即使是她，也会有一种只有亲戚的贵族应有的样子吧。</p>
+    <p>这种笑法似乎在讽刺某个贵族。</p>
+    <p>“<span class="character">尼古拉斯是子爵家的次子。爵位是哥哥继承的人，而且本人也很难遇到好的机会，等意识到什么的时候就加入了秘密部队。</span>”</p>
+    <p>“<span class="character">那么随便进去好吗……暗部</span>”</p>
+    <p>“<span class="character">我进去的时候是长时间呆着却不起眼的朴素的人啊。</span></p>
+    <p><span class="character">但是经验是队伍中最好的，所以我当队长的时候就被任命为副官了</span>”</p>
+    <p>好像尼古拉斯是汉娜的前辈，比她年长。</p>
+    <p>我觉得这也不错。</p>
+    <p>汉娜有孩子也没有孙子。也就是说和伯恩哈特和瓦尔堡是同一代的父母。</p>
+    <p>另一方面，尼古拉斯是瓦尔堡的父亲，说起来是祖父那一代。</p>
+    <p>这一带变得复杂暧昧，正是因为是长寿的吸血鬼吧。</p>
+    <p>在这里稍微整理一下吧。</p>
+    <p>首先符合祖父那一代的是现在所说的尼古拉斯，然后是奥斯特·阿本特罗。</p>
+    <p>接下来是父辈。进入这里的是伯恩哈特和汉娜，瓦尔堡加和扎克，然后看起来完全是老头子，弗里德里克也是这里吗。重新考虑的话是个悲哀的男人。</p>
+    <p>然后孩子们就是我们自己。</p>
+    <p>……莫非汉娜在父辈中属于相当年长的一类呢？梅赛德斯惊讶了。</p>
+    <p>“<span class="character">啊，到了。</span>”</p>
+    <p>汉娜的声音把意识拉回了现实。</p>
+    <p>到达的地方是气派的住宅，屋顶上是……是什么呢？</p>
+    <p>安装了简直像软冰淇淋一样的卷起来螺旋的奇怪的物体。</p>
+    <p>是金色的冰淇淋吗？</p>
+    <p>茶色的话感觉有点危险。</p>
+    <p>“<span class="character">等一下，我去跟门卫说一下。</span>”</p>
+    <p>目送汉娜一边这样说着一边走着，梅赛德斯再次看了看房子。</p>
+    <p>贵族全是亲戚……原来如此。</p>
+    <p>总觉得这个有特点的咕噜咕噜在哪里见过。</p>
+    <p>不记得这件事是个没影儿、无所谓的家伙……这家一定也是自己认识的亲戚或者老家吧。</p>
     <p class="divline"></p>
-    <p>それからしばらくして、梅赛德斯達は応接室へと通された。</p>
-    <p>アポなし突撃であったが、かつての上司の訪問ともなれば通さないわけにはいかないのだろう。</p>
-    <p>やや目に眩しい装飾で飾られた豪華な応接室で梅赛德斯と汉娜を出迎えたのは一組の夫婦だ。</p>
-    <p>男の方は黒髪の、何だかパッとしない顔立ちの男だ。</p>
-    <p>不細工ではないが美形でもない。</p>
-    <p>外見年齢は三十代前半くらいだろうか。少し頬が痩せこけている。</p>
-    <p>明日には忘れていそうな、特徴のない顔だ。</p>
-    <p>女の方は外見は四十代前半の美熟女で、茶髪の髪を屋敷のオブジェと同じようにグルグルに巻いている。</p>
-    <p>何でこのおばさん頭にウンコ載せてるの？</p>
-    <p>女性で不老期が遅いタイプは珍しいが、しかし彼女は不思議とそれが魅力的に見えた。</p>
-    <p>刻まれた皺や、鋭い瞳が他の女性にはない威厳と力強さを持たせているのだ。</p>
-    <p>背も高く、何とも頼りになりそうな女性だ。</p>
-    <p>“<span class="character">お久しぶりです、汉娜隊長。お変わりないようで……</span>”</p>
-    <p>“<span class="character">ニクラスは少し痩せたかな？　昔はもっとガッシリしてたのに</span>”</p>
-    <p>“<span class="character">はは、運動不足でして……</span>”</p>
-    <p>ニクラスはどうやら現役時代はもっと筋肉質だったらしい。</p>
-    <p>困ったように笑う彼に合わせて汉娜も笑い、しかし不意にその表情が引き締まる。</p>
-    <p>“<span class="character">運動だけじゃなく、気配の探知も下手になっちゃったかな</span>”</p>
-    <p>“<span class="character">え、それはどういう……</span>”</p>
-    <p>汉娜は横、上、斜めと視線を動かしてから声を小さくして言う。</p>
-    <p>“<span class="character">何匹かネズミが入ってるね、これ。正確な数までは分からないけど</span>”</p>
-    <p>“<span class="character">なっ！？</span>”</p>
-    <p>汉娜の言葉にニクラスが動揺するが、そんな彼に汉娜は人差し指を立てて静かにするよう促した。</p>
-    <p>夫人の方は度胸が据わっているのか、落ち着いたものだ。</p>
-    <p>彼女は特に動揺も見せずに、静かに言う。</p>
-    <p>“<span class="character">真の王とやらを掲げる一団ですか</span>”</p>
-    <p>“<span class="character">多分ね。私達が来なかったら貴方達、今日の朝にでも殺られてたよ</span>”</p>
-    <p>大したものだな、と梅赛德斯は素直に感心した。</p>
-    <p>気配の探知……言葉にすれば簡単だが、そんな漫画のような技能が実際に出来るかと言えば難しいだろう。</p>
-    <p>フィクションではよく、『木の陰に一人、後ろの壁に二人、向かいの建物の裏に二人……合計五人か』とか恰好よく言ってたりするし、更に飛躍した表現では遥か遠くのビルにいる敵に気付くような描写もあったりする。</p>
-    <p>だが、普通に考えてそんな事が分かるわけがない。</p>
-    <p>背後から僅かな物音などがすれば分かるかもしれないが、視覚、聴覚、触覚のどれにも接触しなければ気付く事など出来ないだろう。</p>
-    <p>恐らくは空気中のナノマシンが何か影響して、それで汉娜は感知出来ているのだろうが、今度やり方を教えてもらいたいな、などと梅赛德斯は呑気に考えていた。</p>
-    <p>そして少しややこしいが、吸血鬼にとっては夜が一日の始まりで朝が終わりだ。</p>
-    <p>なので『今日の朝』という少しおかしな表現になってしまう。</p>
-    <p>“<span class="character">詳しい話は明日にでも聞くとして、今日、泊まっていっていいかな？</span>”</p>
-    <p>“<span class="character">勿論ですわ。貴方もそれでよろしいですわね？</span>”</p>
-    <p>“<span class="character">あ、ああ</span>”</p>
-    <p>汉娜の提案に、夫人が迷うことなく即決を下した。</p>
-    <p>どうやらこの家では奥さんの方が強いらしい。</p>
-    <p>何とも頼りになる、格好いい女性という感じだ。</p>
-    <p>これで頭にグルグルした茶色の変な物を載せてなければよかったのだが。</p>
-    <p>“貴方方が知りたいのは私達の娘のヴァルブルガの事でしょう？</p>
-    <p>私も、いつまでも隠し通せるものではないと思っておりました。</p>
-    <p>ですのでそれは明日、ネズミがいなくなったらお話しましょう”</p>
-    <p>“<span class="character">分かりました。では何としても今日中にネズミを全て駆除してみせます</span>”</p>
-    <p>“<span class="character">頼りにしています。何か必要なものはありますか？</span>”</p>
-    <p>“<span class="character">んー……では、いくつか</span>”</p>
-    <p>夫人と汉娜が話すのを聞きながら、梅赛德斯は何となく天井に意識を向けてみた。</p>
-    <p>やはり何も分からない。</p>
-    <p>だがまあ、汉娜がいると言った以上はいるのだろう。</p>
-    <p>ならば自分はただ、目の前に現れた敵を潰せばいい。</p>
-    <p>“<span class="character">汉娜。私はどうする？</span>”</p>
-    <p>“<span class="character">勿論メルちゃんにも働いてもらうよ。こっち側の最大戦力だしね</span>”</p>
-    <p>“<span class="character">分かった。指示に従おう</span>”</p>
-    <p>自分が下手に動いてもネズミを逃がしてしまうだけだ。</p>
-    <p>極論から言えば梅赛德斯が夫妻の近くで待機していれば暗殺を防ぐ事は出来る。</p>
-    <p>だが逃げるネズミを捕まえるのは梅赛德斯には難しい。</p>
-    <p>ここは汉娜のお手並み拝見だな。そう思いながら梅赛德斯は静かに戦意を高めていた。</p>
-    <p>そして、事態についていけてないニクラスは、やけに頼もしい女性三人を見ながら呆けていた。</p>
+    <p>过了一会儿，梅赛德斯他们被送到了接待室。</p>
+    <p>虽然是没有预约的突击，但是如果是以前上司的访问的话，也不能不通过吧。</p>
+    <p>在装饰得稍显耀眼的豪华接待室里迎接梅赛德斯和汉娜的是一对夫妇。</p>
+    <p>男人是黑发的，总觉得长得不起眼的男人。</p>
+    <p>虽然不丑，但也不好看。</p>
+    <p>外表年龄大概是三十多岁吧。脸颊有点消瘦。</p>
+    <p>这张脸好像明天就忘记了，没有什么特征。</p>
+    <p>女人的外表是四十多岁的美熟女，茶色头发和房子里的装饰物一样卷在一起。</p>
+    <p>为什么要把便便放在这个阿姨的头上？</p>
+    <p>虽然女性中不老期晚的类型很少见，但是她不可思议地觉得那个很有魅力。</p>
+    <p>刻有的皱纹和锐利的眼睛让她看着有其他女性没有的威严和力量。</p>
+    <p>她是一个看起来很可靠的高个子女人。</p>
+    <p>“<span class="character">“好久不见，汉娜队长。好像没什么变化……</span>”</p>
+    <p>“<span class="character">尼古拉斯瘦了一点吗？以前明明更起劲的。</span>”</p>
+    <p>“<span class="character">哈哈，运动不足……</span>”</p>
+    <p>尼古拉斯在现役时代似乎更肌肉。</p>
+    <p>汉娜也笑着配合着为难地笑着的他，但是突然表情紧张起来。</p>
+    <p>“<span class="character">不只是运动，连气息的探知也变得不擅长了吧。</span>”</p>
+    <p>“<span class="character">啊，那是怎么回事……</span>”</p>
+    <p>汉娜侧上斜地移动视线，然后小声说。</p>
+    <p>“<span class="character">这里面有几只老鼠。虽然不知道准确的数字。</span>”</p>
+    <p>“<span class="character">什么！？</span>”</p>
+    <p>尼古拉斯因汉娜的话而动摇，汉娜对这样的他竖起食指催促他安静。</p>
+    <p>妻子很平静，也许是因为她很勇敢。</p>
+    <p>她没有特别的动摇，静静地说。</p>
+    <p>“<span class="character">是高举真正之王之旗的一个团体吗？</span>”</p>
+    <p>“<span class="character">大概吧。如果我们不来的话，你们今天早上也会被杀的。</span>”</p>
+    <p>梅赛德斯坦率地感叹道，真是了不起。</p>
+    <p>气息的探知……用语言来说是很简单的，但是要说像漫画那样的技能真的会不会很难。</p>
+    <p>小说中经常会有“树荫下一个人，后墙上两个人，对面建筑物后面两个人……一共五个人吗”这样帅气的描述，甚至有进一步飞跃的描写，让人注意到远处大楼里的敌人。</p>
+    <p>但是，通过正常的思考是无法理解这样的事情的。</p>
+    <p>如果从背后听到一点点的声音也许就能明白，但是如果不接触视觉、听觉、触觉的话是无法察觉的吧。</p>
+    <p>恐怕空气中的纳米机器受到了什么影响，汉娜才能感知到吧，但是梅赛德斯却不以为然地想，希望下次能教我怎么做。</p>
+    <p>然后虽然有点麻烦，但是对于吸血鬼来说，夜晚是一天的开始，早上就结束了。</p>
+    <p>所以就变成了“今天早上”这样有点奇怪的表达方式。</p>
+    <p>“<span class="character">详细情况明天也会问，今天可以住吗？</span>”</p>
+    <p>“<span class="character">当然。你也这样可以吧？</span>”</p>
+    <p>“<span class="character">啊，是的</span>”</p>
+    <p>对于汉娜的提议，夫人毫不犹豫地立即做出了决定。</p>
+    <p>看来这家的夫人更强。</p>
+    <p>给人一种可靠、帅气的女性的感觉。</p>
+    <p>这样的话，头上就不放咕噜咕噜的茶色奇怪的东西就好了。</p>
+    <p>“<span class="character">你们想知道的是我们女儿瓦尔堡加吧？</span></p>
+    <p><span class="character">我也觉得，这并不是永远都可以隐藏的东西。</span></p>
+    <p><span class="character">所以明天老鼠不见了的话就告诉你吧</span>”</p>
+    <p>“<span class="character">我知道了。那么无论如何今天都要把老鼠全部驱除给你看。</span>”</p>
+    <p>“<span class="character">我依靠你。有什么你需要的吗？</span>”</p>
+    <p>“<span class="character">嗯...然后，一些</span>”</p>
+    <p>梅赛德斯一边听夫人和汉娜说话，一边无意中把意识投向了天花板。</p>
+    <p>还是什么都不懂。</p>
+    <p>不过，既然汉娜说有，也就有了吧。</p>
+    <p>那么，自己只要打败眼前出现的敌人就可以了。</p>
+    <p>“<span class="character">汉娜。我怎么办？</span>”</p>
+    <p>“<span class="character">当然梅尔也要工作。这是我方最大的战斗力。</span>”</p>
+    <p>“<span class="character">知道了。遵从指示吧。</span>”</p>
+    <p>自己再怎么蠢动也只会让老鼠跑。</p>
+    <p>极端地说，如果梅赛德斯在夫妻附近待机的话，可以防止暗杀。</p>
+    <p>但是要抓住逃跑的老鼠对梅赛德斯来说很难。</p>
+    <p>这是看汉娜的本领啊。梅赛德斯一边这样想着一边静静地提高了斗志。</p>
+    <p>然后，跟不上事态发展的尼古拉斯，看着三个非常可靠的女性发呆。</p>
     <p class="divline"></p>
-    <p>※ニクラスさんの髪の色を間違えて金髪にしていたので黒に修正しました。</p>
-    <p>夫人“余談ですが、実は頭のこれ、回転します”ギュイイイイン</p>
-    <p>梅赛德斯（本当に髪か、それ……？）</p>
-    <p>【頭にウンコ乗せた夫人】</p>
-    <p>ヴァルブルガの母であり、菲利克斯の祖母。</p>
-    <p>不老期が遅かったが、それがマイナスではなくプラスに働いた希少なタイプ。</p>
-    <p>決断力に優れ、基本的に即断即決。夫を尻に敷いており、実質的に侯爵家を支配している。</p>
-    <p>名前はカルメン。</p>
-    <p>実はヴァルブルガの他にも年の離れた息子がいるが、息子は留年を繰り返しているらしい。</p>
+    <p>※尼古拉斯的头发颜色弄错了，变成了金发，所以改成了黑色。</p>
+    <p>夫人“<span class="character">余談ですが、実は頭のこれ、回転します</span>”ギュイイイイン</p>
+    <p>梅赛德斯（真的是头发吗，那个……？）</p>
+    <p>【大便放在头上的夫人】</p>
+    <p>瓦尔堡的母亲，菲利克斯的祖母。</p>
+    <p>虽然不老期晚了，但这并不是减分而是积极工作的稀有类型。</p>
+    <p>判断力极好，基本上是迅速的决定。她把丈夫揽在怀里，有效地控制着侯爵家。</p>
+    <p>名字是卡门。</p>
+    <p>实际上除了瓦尔堡加之外还有一个年龄相仿的儿子，儿子似乎一直在留级。</p>
 </body>
 
 </html>
