--- a/OEBPS/Text/c090.xhtml
+++ b/OEBPS/Text/c090.xhtml
@@ -65,15 +65,15 @@
     <p>这样的话，即使自己不在，尼班也许也能一个人反击了。</p>
     <p>汉娜坐在衣柜上发出声音。</p>
     <p>“<span class="character">还有多少人呢？</span>”</p>
-    <p>“现在是最后一次潜入宅邸了。</p>
-    <p>那么说来可疑的小间使接近着卧室姑且捉住了,不过，怎样做？”</p>
+    <p>“<span class="character">现在是最后一次潜入宅邸了。</span></p>
+    <p><span class="character">那么说来可疑的小间使接近着卧室姑且捉住了,不过，怎样做？</span>”</p>
     <p>汉娜的问题背后有人回答。</p>
     <p>那是汉娜养育的她的部下中的一人，在尼班之后成为了副官的男人。</p>
     <p>稍微有点儿粗野的说话方式让人在意，但却是相当有能力的男人。</p>
     <p>“<span class="character">你带了什么？</span>”</p>
-    <p>“毒药和短刀，然后拿着魔石。要杀掉吗？</p>
-    <p>“恩……不是假装是小间使的护卫吧。</p>
-    <p>先把拿的东西全部没收，不能动。说不定会自杀，所以请不要忘记嚼子哦”</p>
+    <p>“<span class="character">毒药和短刀，然后拿着魔石。要杀掉吗？</span></p>
+    <p>“<span class="character">恩……不是假装是小间使的护卫吧。</span></p>
+    <p><span class="character">先把拿的东西全部没收，不能动。说不定会自杀，所以请不要忘记嚼子哦</span>”</p>
     <p>“<span class="character">哇。手脚掉下来不是更可靠吗？</span>”</p>
     <p>“<span class="character">这样啊，要是真的是这个宅子的人不好办啊。不管再怎么播放</span>”</p>
     <p>“<span class="character">还是那么天真啊。但是那样也不错</span>”</p>
@@ -103,8 +103,8 @@
     <p>虽说如此，这只是小玩儿。梅赛德斯和汉娜不同，无法探知对方的气息。</p>
     <p>不知道是不是藏在那种地方了，就算真的藏了起来，也不会有**吧。</p>
     <p>一边这样想着，一边看着，从树背面突然出现了一个女人。</p>
-    <p>“真能干……虽然完全隐瞒了气息，但还是注意到了我的存在。</p>
-    <p>到底是怎么看破的？”</p>
+    <p>“<span class="character">真能干……虽然完全隐瞒了气息，但还是注意到了我的存在。</span></p>
+    <p><span class="character">到底是怎么看破的？</span>”</p>
     <p>（真的出现了。）</p>
     <p>看来是找到了**。</p>
     <p>想说那样的事，清淡地出来了。</p>
