--- a/OEBPS/Text/c093.xhtml
+++ b/OEBPS/Text/c093.xhtml
@@ -22,13 +22,13 @@
     <p>不，这也算是感情用事吧。如果真是彻底的话，应该会抢下内衣，裸体进行询问。</p>
     <p>顺带一提，从内衣里面也好好地使用武器……或者说用指尖采集的尺寸的刀被发现了。</p>
     <p>“<span class="character">小心啊</span>”</p>
-    <p>“那是。这孩子使用的方法我也不知道的很多。</p>
-    <p>刚才也说了，好像叫ninjutsu，那可不是吸血鬼的技术啊。</p>
-    <p>他们在水上行走，在墙上奔跑，做着各种各样的不可思议的事情。</p>
-    <p>总之，因为不知道自己会做什么，所以不是特别想合作的对象”</p>
+    <p>“<span class="character">那是。这孩子使用的方法我也不知道的很多。</span></p>
+    <p><span class="character">刚才也说了，好像叫ninjutsu，那可不是吸血鬼的技术啊。</span></p>
+    <p><span class="character">他们在水上行走，在墙上奔跑，做着各种各样的不可思议的事情。</span></p>
+    <p><span class="character">总之，因为不知道自己会做什么，所以不是特别想合作的对象</span>”</p>
     <p>“<span class="character">交战过吗？</span>”</p>
-    <p>“过去有过几次呢。然后，尤利亚因为憧憬这种弗格拉的术而单身前往另一个国家修行。</p>
-    <p>因为太憧憬弗格拉，连背上奇怪的羽毛装饰都穿上了……哎呀，说起来今天没有装饰啊”</p>
+    <p>“<span class="character">过去有过几次呢。然后，尤利亚因为憧憬这种弗格拉的术而单身前往另一个国家修行。</span></p>
+    <p><span class="character">因为太憧憬弗格拉，连背上奇怪的羽毛装饰都穿上了……哎呀，说起来今天没有装饰啊</span>”</p>
     <p>啊，那个无用的装饰是模仿长笛的吗？</p>
     <p>这样想着，梅赛德斯也理解了那个装饰是否也有它的意义。</p>
     <p>哎呀哎呀，不是象能称呼意义一样的意义，总之只是cosplay。</p>
@@ -46,19 +46,19 @@
     <p>突然开始说些出乎意料的谎言。</p>
     <p>可是因为知道汉娜打算怎样的方向打算带话，梅赛德斯暂且预先关上口。</p>
     <p>“<span class="character">喂，是同伴吗！？那好，马上解开我的拘束吧！</span>”</p>
-    <p>“你是笨蛋吗？我表面上是这里的护卫，不可能做那种事吧。</p>
-    <p>我接到巴吉尔的任务，潜入了谢恩贝尔克夫妇的怀里，与暗杀部队协力拘留了他们的身份……之后让他们站在应有的立场上，从他们自己的口中说出了过去的坏事。</p>
-    <p>由于那样请的事主张『真正的王』的正当性，把舆论倾向这边是本来的计划哟。</p>
-    <p>暗杀部队的任务是为了处理碍事的护卫和佣人，不是杀害莎恩贝尔克夫妻……你反正也不知道那种事吧？”</p>
+    <p>“<span class="character">你是笨蛋吗？我表面上是这里的护卫，不可能做那种事吧。</span></p>
+    <p><span class="character">我接到巴吉尔的任务，潜入了谢恩贝尔克夫妇的怀里，与暗杀部队协力拘留了他们的身份……之后让他们站在应有的立场上，从他们自己的口中说出了过去的坏事。</span></p>
+    <p><span class="character">由于那样请的事主张『真正的王』的正当性，把舆论倾向这边是本来的计划哟。</span></p>
+    <p><span class="character">暗杀部队的任务是为了处理碍事的护卫和佣人，不是杀害莎恩贝尔克夫妻……你反正也不知道那种事吧？</span>”</p>
     <p>“<span class="character">什，你说什么！？</span>”</p>
     <p>竟敢如此撒谎。</p>
     <p>而且，真的能听得见那样很厉害。</p>
     <p>确实，从对方的立场来看，让过去暗杀克里斯托夫·战斗的尼级在公开场合揭露坏事是有效的一手吧。</p>
     <p>这样的话就能引起世人的同情，倾注舆论。</p>
     <p>“<span class="character">但是，我也有那么一句话……</span>”</p>
-    <p>“当然了。你本来就吃了禁止出击的命令吧。</p>
-    <p>因为是绝密任务，所以除了负责任务的人以外，没有人能告诉你吧。</p>
-    <p>话说，为什么擅自出来了？多亏了你，计划才乱七八糟的”</p>
+    <p>“<span class="character">当然了。你本来就吃了禁止出击的命令吧。</span></p>
+    <p><span class="character">因为是绝密任务，所以除了负责任务的人以外，没有人能告诉你吧。</span></p>
+    <p><span class="character">话说，为什么擅自出来了？多亏了你，计划才乱七八糟的</span>”</p>
     <p>“<span class="character">啊，不，那个……</span>”</p>
     <p>对汉娜的话，尤利亚眼看着惊慌失措。</p>
     <p>所谓禁止出击命令，不过是汉娜的想象而已。</p>
@@ -66,26 +66,26 @@
     <p>像这样轻而易举地说出重大情报的家伙，绝密任务是不能胜任的。</p>
     <p>她本来手艺就很好，但是由于过于激烈的自我主张，作为暗杀者来说是不合格的。</p>
     <p>一瞬间身分就要被打破的家伙是不可能把暗杀交给他的。</p>
-    <p>“喂，你是故意打扰我吗？</p>
-    <p>还是说你实际上是王家方面的间谍呢？</p>
+    <p>“<span class="character">喂，你是故意打扰我吗？</span></p>
+    <p><span class="character">还是说你实际上是王家方面的间谍呢？</span></p>
     <p>“<span class="character">那，不可能吧！我真的被马克斯先生的理想所吸引……</span>”</p>
-    <p>“嗯，很理想呢……难道不是有什么不同？你真的明白吗？</p>
-    <p>“我知道啦！改变现在的贵族上位制度，带来真正的平等和和平！</p>
-    <p>要成为一个没有饥饿和痛苦的百姓的国家！这就是马克斯先生的理想吧！？”</p>
+    <p>“<span class="character">嗯，很理想呢……难道不是有什么不同？你真的明白吗？</span></p>
+    <p>“<span class="character">我知道啦！改变现在的贵族上位制度，带来真正的平等和和平！</span></p>
+    <p><span class="character">要成为一个没有饥饿和痛苦的百姓的国家！这就是马克斯先生的理想吧！？</span>”</p>
     <p>首先，立刻，问出马克斯的理想啦的事成功。</p>
     <p>我不知道这是马克斯本人孩子留下的幻想，还是罗勒吹嘘的表面理想，尤利亚似乎相信这个。</p>
     <p>她好像是农民出身，所以非常向往那种平等的社会吧。</p>
-    <p>“嗯。最低限度的事好象大体上知道。</p>
-    <p>但是你的疑虑还没有消除”</p>
+    <p>“<span class="character">嗯。最低限度的事好象大体上知道。</span></p>
+    <p><span class="character">但是你的疑虑还没有消除</span>”</p>
     <p>“<span class="character">这、那种……我真的……</span>”</p>
     <p>汉娜挽着手臂，眯着眼睛。</p>
     <p>完全是“我生气了”的姿势。</p>
     <p>她由于扮演『是真正的王派，被朋友妨碍任务生气的人』的事好象拉出信息。</p>
     <p>做法相当高明。</p>
-    <p>“那下次见。你知道我们的支援者有多少人，是谁吗？</p>
-    <p>虽然觉得不会吧，但是如果搞错暗杀的话那就大问题了？”</p>
-    <p>“不，就算是我，我也不会做到那种程度！大家好好地都记得哟！</p>
-    <p>听好了，仔细听……首先是三人商会的トライヌ吧。然后……”</p>
+    <p>“<span class="character">那下次见。你知道我们的支援者有多少人，是谁吗？</span></p>
+    <p><span class="character">虽然觉得不会吧，但是如果搞错暗杀的话那就大问题了？</span>”</p>
+    <p>“<span class="character">不，就算是我，我也不会做到那种程度！大家好好地都记得哟！</span></p>
+    <p><span class="character">听好了，仔细听……首先是三人商会的トライヌ吧。然后……</span>”</p>
     <p>实在是微不足道。</p>
     <p>梅赛德斯只能惊讶于尤利亚的嘴巴之轻。</p>
     <p>有趣地列举一个接一个协助『真正的王』的选民们的名字。</p>
@@ -108,9 +108,9 @@
     <p>马克斯和瓦尔堡加……并且知道了菲利克斯的关系的时候来了。</p>
     <p>“<span class="character">梅尔。为了慎重起见，请让尤利亚再来一次。然后再听二班同学说吧</span>”</p>
     <p>“<span class="character">真慎重</span>”</p>
-    <p>“那是。如果今后听的信息很差的话，也许会动摇国家。</p>
-    <p>而且为了菲利克斯的安全，只想问我们两个。</p>
-    <p>特别是绝对不会被尤利亚问到”</p>
+    <p>“<span class="character">那是。如果今后听的信息很差的话，也许会动摇国家。</span></p>
+    <p><span class="character">而且为了菲利克斯的安全，只想问我们两个。</span></p>
+    <p><span class="character">特别是绝对不会被尤利亚问到</span>”</p>
     <p>还没有确定。</p>
     <p>但是有确信。菲利克斯肯定是这样的。</p>
     <p>一般来说，只是巧合的可能性比较高。</p>
