--- a/OEBPS/Text/c094.xhtml
+++ b/OEBPS/Text/c094.xhtml
@@ -18,12 +18,12 @@
     <p>在此基础上，施加了隔音魔法的别室只有谢恩贝尔克夫妇和梅赛德斯、汉娜四人进入，关上门。</p>
     <p>这样的话，就不会早早地把话泄露在外面了吧。</p>
     <p>汉娜毫不客气地向坐在椅子上，看起来难以交谈的以前的部下切入正题。</p>
-    <p>“我不喜欢拐弯抹角，我先问你答案吧。</p>
-    <p>尼班，你曾经奉奥古斯特王之命刺杀了克里斯托夫。</p>
-    <p>于是，虽然抓住了女儿，但却因为感情的羁绊而无法杀人，作为义女，将女儿抚养成人。</p>
-    <p>那姑娘才是瓦尔堡加……没错吧？</p>
+    <p>“<span class="character">我不喜欢拐弯抹角，我先问你答案吧。</span></p>
+    <p><span class="character">尼班，你曾经奉奥古斯特王之命刺杀了克里斯托夫。</span></p>
+    <p><span class="character">于是，虽然抓住了女儿，但却因为感情的羁绊而无法杀人，作为义女，将女儿抚养成人。</span></p>
+    <p><span class="character">那姑娘才是瓦尔堡加……没错吧？</span>”</p>
     <p>“<span class="character">……您预料到这种程度了吗？</span>”</p>
-    <p>二班级观念的声音让汉娜脸色变得严峻。</p>
+    <p>尼班观念的声音让汉娜脸色变得严峻。</p>
     <p>如果可以的话希望你能否定……这是真心话。</p>
     <p>自己和梅赛德斯读得太深了，这才是最圆满的道路。</p>
     <p>但是，越是坏的预测就越恰当。</p>
@@ -44,8 +44,8 @@
     <p>通常，贵族的继承人和男人的行情决定着,不过，伯恩哈特好坏也打破常规。虽然理解旧习俗也有必要性，但不受其束缚。</p>
     <p>如果必要的话就越过无视它。</p>
     <p>这样一来，瓦尔堡加当然会着急。</p>
-    <p>“我曾奉王之命，犯下了大错。</p>
-    <p>杀了克里斯托夫，然后抓住了那个女孩……但是，无论如何也无法杀死幼小的孩子”</p>
+    <p>“<span class="character">我曾奉王之命，犯下了大错。</span></p>
+    <p><span class="character">杀了克里斯托夫，然后抓住了那个女孩……但是，无论如何也无法杀死幼小的孩子</span>”</p>
     <p>梅赛德斯看着后悔地说着话的男人，只能惊呆了。</p>
     <p>太半途而废了。</p>
     <p>结果这次的骚动难道不是这个男人的优柔寡断所导致的吗？</p>
@@ -62,36 +62,36 @@
     <p>“<span class="character">你觉得自己半途而废吧？</span>”</p>
     <p>夫人像看穿了梅赛德斯的想法一样嘟哝着。</p>
     <p>这和丈夫不同，声音很有力量。</p>
-    <p>“这个人从以前开始就是这样。因为讨厌被人认为坏，所以只会当场采取看得见的行动。</p>
-    <p>所以到后来总是成为麻烦的事情。</p>
-    <p>跟我结婚的时候也是这样。你相信吗？这个人，对作为未婚妻的我隐瞒自己的工作，在结婚紧接之前把自己的工作和克里斯托夫先生杀死了的事，说出了想把瓦尔堡加作为继女”</p>
+    <p>“<span class="character">这个人从以前开始就是这样。因为讨厌被人认为坏，所以只会当场采取看得见的行动。</span></p>
+    <p><span class="character">所以到后来总是成为麻烦的事情。</span></p>
+    <p><span class="character">跟我结婚的时候也是这样。你相信吗？这个人，对作为未婚妻的我隐瞒自己的工作，在结婚紧接之前把自己的工作和克里斯托夫先生杀死了的事，说出了想把瓦尔堡加作为继女</span>”</p>
     <p>夫人边说边打丈夫的头。</p>
     <p>“<span class="character">那是……真令人悲伤。但是为什么会和这样的男人结婚呢？</span>”</p>
     <p>梅赛德斯不经意间在妻子的面前称呼她为“这样的男人”，但夫人似乎并不在意。</p>
     <p>她微笑着继续说话。</p>
-    <p>“很简单啊。太没出息了……我想了。</p>
-    <p>“啊啊，这个傻瓜我得跟着干才行”。</p>
-    <p>而且，如果就那样放任不管的话，有瓦尔堡加会变得不幸也显现出来了。</p>
-    <p>嘛，在决定和这个笨蛋结婚的时候，大部分笨蛋都打算接受了……女儿的增加也是一个小问题”</p>
-    <p>看来ni班在最后的最后只受惠于女运。</p>
+    <p>“<span class="character">很简单啊。太没出息了……我想了。</span></p>
+    <p><span class="character">‘啊啊，这个傻瓜我得跟着干才行’。</span></p>
+    <p><span class="character">而且，如果就那样放任不管的话，有瓦尔堡加会变得不幸也显现出来了。</span></p>
+    <p><span class="character">嘛，在决定和这个笨蛋结婚的时候，大部分笨蛋都打算接受了……女儿的增加也是一个小问题</span>”</p>
+    <p>看来尼班在最后的最后只受惠于女运。</p>
     <p>到目前为止，在披露自己的不足之后，即使如此也不会有女性接受我的吧。</p>
     <p>我想如果是她的话一定能找到更好的对手，不过爱的形式各不相同吧。</p>
     <p>这样想着，梅赛德斯将视线转向了汉娜。</p>
     <p>“<span class="character">接下来该怎么办，汉娜</span>”</p>
-    <p>“嗯，和呢。首先要给菲利克斯君和瓦尔堡加先生安上护卫。</p>
-    <p>话虽如此，突然加上护卫什么的，只会让人觉得可疑，所以明明藏起来却给孩子带了个好孩子”</p>
+    <p>“<span class="character">嗯，和呢。首先要给菲利克斯君和瓦尔堡加先生安上护卫。</span></p>
+    <p><span class="character">话虽如此，突然加上护卫什么的，只会让人觉得可疑，所以明明藏起来却给孩子带了个好孩子</span>”</p>
     <p>总之，万一瓦尔堡加和菲利克斯被绑架了就麻烦了。</p>
     <p>所以隐藏起来安上护卫是必要的吧。</p>
     <p>关于这一点，伯恩哈特的许可应该也有，但他可能已经开始动手了。</p>
-    <p>“接下来，先把对方的支援者拉拢过来吧。</p>
-    <p>我觉得有几个人想像トライヌ那样脱掉，所以不会那么难”</p>
+    <p>“<span class="character">接下来，先把对方的支援者拉拢过来吧。</span></p>
+    <p><span class="character">我觉得有几个人想像トライヌ那样脱掉，所以不会那么难</span>”</p>
     <p>要支撑组织，需要支援者。</p>
     <p>如果全部都去掉的话，对方方面的发言力会格外下降。</p>
     <p>既然有迷宫，完全无力化是不可能的，但是不做的话大不一样吧。</p>
     <p>“<span class="character">不告诉菲利克斯可以吗？</span>”</p>
-    <p>“早晚有教的必要，现在还是不说比较好吧。</p>
-    <p>奇怪地发挥责任感被做奇怪的事也感到为难。</p>
-    <p>我先把这个房子留个护卫，二班同学也要小心啊”</p>
+    <p>“<span class="character">早晚有教的必要，现在还是不说比较好吧。</span></p>
+    <p><span class="character">奇怪地发挥责任感被做奇怪的事也感到为难。</span></p>
+    <p><span class="character">我先把这个房子留个护卫，二班同学也要小心啊</span>”</p>
     <p>首先决定今后的方针，然后汉娜朝着关闭尤利亚的房间前进。</p>
     <p>回去之前，她有必要好好地回收。</p>
     <p>逃跑什么的太麻烦了，所以还是严加关闭比较好吧。</p>
@@ -113,15 +113,15 @@
     <p>你是怎么从那里逃出来的？</p>
     <p>汉娜没有解除警戒，一直在思考，但梅赛德斯注意到了一张残留在椅子上的羊皮纸。</p>
     <p>打开那个一看，上面写着以下的事情。</p>
-    <p>“打扰了任务，真的很抱歉。</p>
-    <p>为了表示歉意，我会尽快将你们从二年级那里听到的重大情报传达给罗勒殿。</p>
-    <p>那个花粉很有效呢。为了不被风的魔法吸到嘴里，向监视的人吹了一下。</p>
-    <p>志同道合的朋友，下次在哪里见面吧。</p>
-    <p>啊，还有妨碍任务的事情，请一定要保密在罗勒殿下……”</p>
+    <p>“<span class="character">打扰了任务，真的很抱歉。</span></p>
+    <p><span class="character">为了表示歉意，我会尽快将你们从尼班那里听到的重大情报传达给罗勒殿。</span></p>
+    <p><span class="character">那个花粉很有效呢。为了不被风的魔法吸到嘴里，向监视的人吹了一下。</span></p>
+    <p><span class="character">志同道合的朋友，下次在哪里见面吧。</span></p>
+    <p><span class="character">啊，还有妨碍任务的事情，请一定要对罗勒殿下保密……</span>”</p>
     <p>汉娜不由得想撕羊皮纸。</p>
     <p>怎么回事？她利用这里的花粉让监视者睡着，然后夺走钥匙堂堂正正地出去了。</p>
     <p>绳子大概是用冰魔法什么的斩的吧。</p>
-    <p>最让我生气的是，我并不是看破了这边的谎言，而是抱着被普通欺骗之后的道歉的心情做了我最讨厌的事情。</p>
+    <p>最让我生气的是，并不是看破了这边的谎言，而是抱着被普通欺骗之后的道歉的心情做了我最讨厌的事情。</p>
     <p>“<span class="character">梅尔……变更预定。我会把事情告诉菲利克斯君，完全防备好哟</span>”</p>
     <p>汉娜已经充满了想哭的心情。</p>
 </body>
