--- a/OEBPS/Text/c095.xhtml
+++ b/OEBPS/Text/c095.xhtml
@@ -89,7 +89,7 @@
     <p>罗勒·三文鱼烦恼着。</p>
     <p>让他烦恼的是回到困境中的尤利亚。</p>
     <p>不，准确地说，她带来的信息才是她烦恼的根源。</p>
-    <p>二班级的女儿，是克里斯托夫的血统。</p>
+    <p>尼班的女儿，是克里斯托夫的血统。</p>
     <p>这是最糟糕的展开。</p>
     <p>什么最糟糕，她就是伯恩哈特的妻子。</p>
     <p>也就是说，如果这个信息是真的……真正的王派将进入。大体上确实结束。</p>
