--- a/OEBPS/Text/c099.xhtml
+++ b/OEBPS/Text/c099.xhtml
@@ -59,7 +59,7 @@
     <p>大家都被那家伙骗了！”</p>
     <p>“<span class="character">ぬう！？那人就是我爷爷……不可原谅！</span>”</p>
     <p>好像在某种程度上也调查过这边的事情。</p>
-    <p>正如罗勒所说，汉娜是二班级的前上司。那个地方没错。</p>
+    <p>正如罗勒所说，汉娜是尼班的前上司。那个地方没错。</p>
     <p>麦克斯完全相信巴西的话，用愤怒的眼神看着汉娜。</p>
     <p>竟敢如此扭曲地培育。</p>
     <p>一般认为本人天生的气质本身是直率，诱发更为悲哀。</p>
