--- a/OEBPS/Text/c074.xhtml
+++ b/OEBPS/Text/c074.xhtml
@@ -22,18 +22,18 @@
     <p>那个不仅仅是锋利的。看不见的刀刃……大概被认为是风的魔法的什么被放出，外观以上斩击伸长来。</p>
     <p>梅赛德斯看到远处囚犯被卷入其中，脸上微微皱起了眉头。</p>
     <p>我绝不是同情。只是，警戒了容易地两断了吸血鬼的身体的杀伤力。</p>
-    <p>“如果你能动得太快的话，我会很开心的。</p>
-    <p>我给你治疗，但如果可以的话，我不想伤害皮肤。</p>
-    <p>如果变成那样，就变成这样，我会在你那白色的皮肤上精心地涂上药物让它鸣叫”</p>
+    <p>“<span class="character">如果你能动得太快的话，我会很开心的。</span></p>
+    <p><span class="character">我给你治疗，但如果可以的话，我不想伤害皮肤。</span></p>
+    <p><span class="character">如果变成那样，就变成这样，我会在你那白色的皮肤上精心地涂上药物让它鸣叫</span>”</p>
     <p>“<span class="character">……看来是个很扭曲的性癖啊</span>”</p>
     <p>梅赛德斯一言不发，缩短距离，砍伐了哈尔巴德。</p>
     <p>这个地下战场对梅赛德斯不利。</p>
     <p>哈尔巴德本来是能够填补不足的利奇的优秀武器，但是在这样的密闭空间里长处被杀害。</p>
     <p>现在刀刃还碰到墙壁，用强行甩开的事一边打碎墙壁一边攻击着,不过，还是这个如何一拍子一边也推迟了。</p>
     <p>贝阿朵列克斯轻易地避开了那一击，向后退了。</p>
-    <p>“没有歪曲。所谓歪斜是从正确的形式扭曲的事吧？</p>
-    <p>我在这个国家是法律。那么可以说不顺从我的意志的人才是扭曲的。</p>
-    <p>我只是提倡正常世界的存在方式”</p>
+    <p>“<span class="character">没有歪曲。所谓歪斜是从正确的形式扭曲的事吧？</span></p>
+    <p><span class="character">我在这个国家是法律。那么可以说不顺从我的意志的人才是扭曲的。</span></p>
+    <p><span class="character">我只是提倡正常世界的存在方式</span>”</p>
     <p>“<span class="character">正常的世界？</span>”</p>
     <p>“<span class="character">没错。我是这么想的，这个世界只要女人就够了</span>”</p>
     <p>这家伙在说什么？</p>
@@ -68,9 +68,9 @@
     <p>几秒钟的落下后站立的地方，是与刚才完全不同的面积相当大的空间。</p>
     <p>铺满了沙子的那个地方半径成为50m左右的圆形，象包围那个周围一样地墙被堵住。</p>
     <p>那上面有观众席……怎么看都只看到了斗技场。</p>
-    <p>“很吃惊吧？这里就是我们所看到的竞技场。</p>
-    <p>平时是让男奴隶和囚犯与魔物竞争的娱乐场所，但只有今天被包场了。</p>
-    <p>容许缺乏风雅。本来不是像你这样的人应该进的地方”</p>
+    <p>“<span class="character">很吃惊吧？这里就是我们所看到的竞技场。</span></p>
+    <p><span class="character">平时是让男奴隶和囚犯与魔物竞争的娱乐场所，但只有今天被包场了。</span></p>
+    <p><span class="character">容许缺乏风雅。本来不是像你这样的人应该进的地方</span>”</p>
     <p>在被卷入而坠落的囚犯们掉落地面崩溃的背景下，贝阿朵里克斯没有被听见却进行解说。</p>
     <p>虽然也曾有过相当恶趣的娱乐活动，但若是中世纪遵循的文明或许就是这样的。</p>
     <p>在文明发达的现代，正因为道德等问题才被禁止杀人，所以以前并不讨厌。</p>
@@ -95,24 +95,24 @@
     <p>梅赛德斯所持有的哈尔巴德比大人的还大，其射程长达2米。</p>
     <p>相对的，贝阿朵力克斯所持的扇子只有20cm左右。两者所具有的利物之差一目了然。</p>
     <p>但是贝阿朵列克丝丝毫不松懈的笑容，像是展示自己拿着的扇子一样展开。</p>
-    <p>“这个扇子……不用说铁扇，很漂亮吧？</p>
-    <p>就算和你那重量级的武器碰撞，也不会受伤……你觉得为什么呢？”</p>
+    <p>“<span class="character">这个扇子……不用说铁扇，很漂亮吧？</span></p>
+    <p><span class="character">就算和你那重量级的武器碰撞，也不会受伤……你觉得为什么呢？</span>”</p>
     <p>“<span class="character">那么。不是用相当坚固的材料做成的吗？</span>”</p>
-    <p>“哈哈哈！的确，那个是正确的。正如你说的那样，这个是用坚固的铁做成的。</p>
-    <p>是的……是绝对不会坏的神之铁。你明白这个意思吗？</p>
+    <p>“<span class="character">哈哈哈！的确，那个是正确的。正如你说的那样，这个是用坚固的铁做成的。</span></p>
+    <p><span class="character">是的……是绝对不会坏的神之铁。你明白这个意思吗？</span></p>
     <p>面对贝阿列克斯引以为豪的话语，梅赛德斯眯起了眼睛。</p>
     <p>绝不破碎的神之铁……梅赛德斯知道它的存在。</p>
     <p>并且，使用那个被制造了的武器的存在也有线索。</p>
     <p>但是没有惊讶。因为对方是一国之主。</p>
     <p>那么从最初开始考虑说不定持(有)着。</p>
     <p>是的……也就是说，那把铁扇可能是迷宫。</p>
-    <p>“不明白的话就告诉你吧。盛开吧，我的园子！《解冻》！</p>
+    <p>“<span class="character">不明白的话就告诉你吧。盛开吧，我的园子！《解冻》！</span></p>
     <p>贝阿朵里克斯打开了铁扇，说出了解放迷宫的口号。</p>
     <p>于是，斗技场瞬间变成了花田，周围开满了色彩鲜艳的花朵。</p>
     <p>恐怕是解放了迷宫的一个区划吧。</p>
     <p>周围的花，也不仅仅是植物。觉得全部都是魔物比较好。</p>
-    <p>“骄傲吧，女儿啊。你是适合展示我的园区的强敌。</p>
-    <p>只有王的血统可以继承，可以匹敌一军的力量……好好品尝吧”</p>
+    <p>“<span class="character">骄傲吧，女儿啊。你是适合展示我的园区的强敌。</span></p>
+    <p><span class="character">只有王的血统可以继承，可以匹敌一军的力量……好好品尝吧</span>”</p>
     <p>为了响应贝阿朵列克斯的声音花儿开始动了。</p>
     <p>宛如在梦中迷失的美景，但仅仅如此是不会结束的吧。</p>
     <p>在此之前梅赛德斯想。</p>
